--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vervein",
+  "homepage": "https://verveuni.com/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,16 +11,21 @@
     "@fontsource/roboto": "^5.0.13",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^5.16.6",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.19.3",
+    "bootstrap": "^5.3.3",
     "firebase": "^10.12.4",
+    "flowbite-react": "^0.10.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
@@ -27,7 +33,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "Cross-env CI=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
