--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^5.16.6",
@@ -19,16 +20,24 @@
     "@testing-library/user-event": "^14.5.2",
     "antd": "^5.19.3",
     "bootstrap": "^5.3.3",
-    "firebase": "^10.12.4",
+    "clsx": "^2.1.1",
+    "firebase": "^10.12.5",
     "flowbite-react": "^0.10.1",
+    "framer-motion": "^11.3.24",
+    "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
+    "react-phone-number-input": "^3.4.5",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.2",
     "web-vitals": "^4.2.2"
   },
   "scripts": {
